[tool.poetry]
name = "rattle-snake"
version = "0.1.0"
description = "Package for random points for locations"
authors = ["Joseph Daws <daws.joseph@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.1"
numpy = "scipy"
scipy = "^1.9.2"
seaborn = "^0.12.0"
click = "^8.1.3"
scikit-learn = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
